--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: '3.3'
 services:
     nginx-leafletjs:
+        container_name: leaflet
+        image:  nginx-leafletjs:latest
+        restart: always
         ports:
             - '8777:80'
-        image: freecandy/nginx-leafletjs
-        restart: always
